[gd_scene load_steps=10 format=3 uid="uid://dy1xj45xs1641"]

[ext_resource type="Script" uid="uid://ce5msl6pfmok4" path="res://scripts/slime.gd" id="1_aiwxb"]
[ext_resource type="Texture2D" uid="uid://b64rgpcqe6bjp" path="res://Assets/brackeys_platformer_assets/brackeys_platformer_assets/sprites/slime_purple.png" id="1_swwnm"]
[ext_resource type="PackedScene" uid="uid://ps8rmadxws7t" path="res://Scenes/kill_zone.tscn" id="2_aiwxb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_paq7w"]
atlas = ExtResource("1_swwnm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4si1"]
atlas = ExtResource("1_swwnm")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gljc"]
atlas = ExtResource("1_swwnm")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblni"]
atlas = ExtResource("1_swwnm")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_e388w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_paq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4si1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblni")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4o34"]
size = Vector2(12, 12)

[node name="Slime" type="Node2D"]
script = ExtResource("1_aiwxb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e388w")
autoplay = "default"
frame = 2
frame_progress = 0.77462536

[node name="KillZone" parent="." instance=ExtResource("2_aiwxb")]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_r4o34")

[node name="RayCastRight" type="RayCast2D" parent="KillZone"]
position = Vector2(0, 5)
target_position = Vector2(11, 0)

[node name="RayCastRight2" type="RayCast2D" parent="KillZone"]
position = Vector2(5, -1)
target_position = Vector2(9, 13)

[node name="RayCastLeft" type="RayCast2D" parent="KillZone"]
position = Vector2(0, 5)
target_position = Vector2(-10, 0)

[node name="RayCastLeft2" type="RayCast2D" parent="KillZone"]
position = Vector2(-5, -1)
target_position = Vector2(-7, 13)
